fix chromium horizontai scrollbar

--- a/src/util/generic.css
+++ b/src/util/generic.css
@@ -3,10 +3,9 @@
 	clip: rect(0 0 0 0);
 	clip-path: inset(50%);
 	block-size: 1px;
-	overflow: hidden;
-	position: absolute;
-	white-space: nowrap;
 	inline-size: 1px;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 .all\:initial {
